packages/parser-javascript/test/corpus/line_continuation.txt
================
Line continuation joins binary expression across lines
================
key: foo \
  + bar
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      colinear_value: (expression_with_to
        expression: (expression
          (binary_expression
            (expression
              (atom
                (id)))
            (expression
              (atom
                (id)))))))))
================
Line continuation in list expression
================
key: [1, \
  2, 3]
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      colinear_value: (expression_with_to
        expression: (expression
          (atom
            (list
              (expression
                (atom
                  (number)))
              (expression
                (atom
                  (number)))
              (expression
                (atom
                  (number))))))))))
================
Line continuation with comparison operators
================
key: a == b \
  and c != d
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      colinear_value: (expression_with_to
        expression: (expression
          (binary_expression
            (expression
              (comparison_expression
                (expression
                  (atom
                    (id)))
                (expression
                  (atom
                    (id)))))
            (expression
              (comparison_expression
                (expression
                  (atom
                    (id)))
                (expression
                  (atom
                    (id)))))))))))
