packages/parser-javascript/test/corpus/mapping_edge_cases.txt
================
Mapping: deeply nested blocks (four levels)
================
a:
    b:
        c:
            d: "deep"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              block_value: (mapping
                (mapping_element
                  key: (key
                    (id))
                  colinear_value: (expression_with_to
                    expression: (expression
                      (atom
                        (string
                          (string_content))))))))))))))
================
Mapping: colinear value with mutable variable declaration
================
config:
    count: mutable Number = 0
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (variable_declaration
            type: (expression
              (atom
                (id)))
            default: (expression
              (atom
                (number)))))))))
================
Mapping: colinear value with linked variable declaration
================
config:
    name: linked Text
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (variable_declaration
            type: (expression
              (atom
                (id)))))))))
================
Mapping: empty keyword in block position
================
config:
    items:
        empty
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (empty_keyword))))))
================
Mapping: arrow body with procedure containing templates
================
topic test:
    instructions: ->
        | hello
        | world
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (procedure
            (template
              (template_content))
            (template
              (template_content))))))))
================
Mapping: arrow with no body (empty procedure)
================
topic test:
    instructions: ->
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (procedure
            (ERROR)))))))
================
Mapping: multiple keys with different value types
================
config:
    name: "hello"
    count: 42
    active: true
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (number)))))
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (id)))))))))
================
Mapping: two-word key with colinear value
================
topic greeting:
    instructions: "say hello"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))))))
================
Mapping: comment between mapping elements
================
config:
    a: 1
    # this is a comment
    b: 2
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (number)))))
        (comment)
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (number)))))))))
================
Mapping: string value containing colon
================
config:
    url: "http://example.com"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))))))
================
Mapping: sequence as block value
================
config:
    items:
        - "a"
        - "b"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (sequence
            (sequence_element
              colinear_value: (expression_with_to
                expression: (expression
                  (atom
                    (string
                      (string_content))))))
            (sequence_element
              colinear_value: (expression_with_to
                expression: (expression
                  (atom
                    (string
                      (string_content))))))))))))
