packages/parser-javascript/test/corpus/missing_colon.txt
================
Missing colon before indented block should produce MISSING node
================
variables
    # Customer information
    customer_id: mutable string = ""
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      (MISSING :)
      (comment)
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (variable_declaration
            type: (expression
              (atom
                (id)))
            default: (expression
              (atom
                (string)))))))))
================
Missing colon with two-word key
================
topic Example
    description: "hello"
other_topic test:
    description: "world"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      (MISSING :)
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))))
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))))))
================
Missing colon before at-expression should produce MISSING node
================
actions:
    CloseCase @actions.CloseCase
        with caseRecord=...
    Other: @actions.Other
        with param=...
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          (MISSING :)
          colinear_value: (expression_with_to
            expression: (expression
              (member_expression
                (expression
                  (atom
                    (at_id
                      (id))))
                (id))))
          block_value: (mapping
            (with_statement
              param: (id)
              value: (expression
                (atom
                  (ellipsis))))))
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (member_expression
                (expression
                  (atom
                    (at_id
                      (id))))
                (id))))
          block_value: (mapping
            (with_statement
              param: (id)
              value: (expression
                (atom
                  (ellipsis))))))))))
================
Missing colon before arrow should produce MISSING node
================
topic tyx:
    reasoning:
        instructions ->
            | test
        actions:
            CloseCase: @actions.CloseCase
                with caseRecord=...
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              (MISSING :)
              block_value: (procedure
                (template
                  (template_content))))
            (mapping_element
              key: (key
                (id))
              block_value: (mapping
                (mapping_element
                  key: (key
                    (id))
                  colinear_value: (expression_with_to
                    expression: (expression
                      (member_expression
                        (expression
                          (atom
                            (at_id
                              (id))))
                        (id))))
                  block_value: (mapping
                    (with_statement
                      param: (id)
                      value: (expression
                        (atom
                          (ellipsis))))))))))))))
================
Missing colon before arrow should not cascade to sibling blocks
================
topic broken:
    reasoning:
        instructions ->
            | test
        actions:
            CloseCase: @actions.CloseCase
                with caseRecord=...

topic good:
    description: "This should survive"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              (MISSING :)
              block_value: (procedure
                (template
                  (template_content))))
            (mapping_element
              key: (key
                (id))
              block_value: (mapping
                (mapping_element
                  key: (key
                    (id))
                  colinear_value: (expression_with_to
                    expression: (expression
                      (member_expression
                        (expression
                          (atom
                            (at_id
                              (id))))
                        (id))))
                  block_value: (mapping
                    (with_statement
                      param: (id)
                      value: (expression
                        (atom
                          (ellipsis))))))))))))
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))))))
