packages/parser-javascript/test/corpus/sequence_edge_cases.txt
================
Sequence: bare dash with block value mapping
================
items:
    -
        name: "first"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (sequence
        (sequence_element
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              colinear_value: (expression_with_to
                expression: (expression
                  (atom
                    (string
                      (string_content))))))))))))
================
Sequence: block value mapping with multiple fields
================
items:
    -
        name: "first"
        value: 1
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (sequence
        (sequence_element
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              colinear_value: (expression_with_to
                expression: (expression
                  (atom
                    (string
                      (string_content))))))
            (mapping_element
              key: (key
                (id))
              colinear_value: (expression_with_to
                expression: (expression
                  (atom
                    (number)))))))))))
================
Sequence: colinear mapping element with block continuation
================
items:
    - key: "hello"
      extra: "world"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (sequence
        (sequence_element
          colinear_mapping_element: (mapping_element
            key: (key
              (id))
            colinear_value: (expression_with_to
              expression: (expression
                (atom
                  (string
                    (string_content))))))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              colinear_value: (expression_with_to
                expression: (expression
                  (atom
                    (string
                      (string_content))))))))))))
================
Sequence: top level sequence
================
- "first"
- "second"
- "third"
---
(source_file
  (sequence
    (sequence_element
      colinear_value: (expression_with_to
        expression: (expression
          (atom
            (string
              (string_content))))))
    (sequence_element
      colinear_value: (expression_with_to
        expression: (expression
          (atom
            (string
              (string_content))))))
    (sequence_element
      colinear_value: (expression_with_to
        expression: (expression
          (atom
            (string
              (string_content))))))))
================
Sequence: heterogeneous element types
================
items:
    - "text"
    - 42
    - true
    - @ref.value
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (sequence
        (sequence_element
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (string
                  (string_content))))))
        (sequence_element
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (number)))))
        (sequence_element
          colinear_value: (expression_with_to
            expression: (expression
              (atom
                (id)))))
        (sequence_element
          colinear_value: (expression_with_to
            expression: (expression
              (member_expression
                (expression
                  (atom
                    (at_id
                      (id))))
                (id)))))))))
================
Sequence: deeply nested mapping inside sequence element
================
items:
    -
        nested:
            deep: "value"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (sequence
        (sequence_element
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              block_value: (mapping
                (mapping_element
                  key: (key
                    (id))
                  colinear_value: (expression_with_to
                    expression: (expression
                      (atom
                        (string
                          (string_content))))))))))))))
================
Sequence: multiple bare dashes with block values
================
items:
    -
        a: 1
    -
        b: 2
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (sequence
        (sequence_element
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              colinear_value: (expression_with_to
                expression: (expression
                  (atom
                    (number)))))))
        (sequence_element
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              colinear_value: (expression_with_to
                expression: (expression
                  (atom
                    (number)))))))))))
================
Sequence: colinear mapping element with two-word key
================
items:
    - topic name: "greeting"
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (sequence
        (sequence_element
          colinear_mapping_element: (mapping_element
            key: (key
              (id)
              (id))
            colinear_value: (expression_with_to
              expression: (expression
                (atom
                  (string
                    (string_content)))))))))))
