packages/parser-javascript/test/corpus/template_comments.txt
================
Template: comment-only line at end absorbed into content
================
topic foo:
    reasoning:
        instructions: ->
            | hello
              # commented
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              block_value: (procedure
                (template
                  (template_content))))))))))
================
Template: multiple comment-only lines at end absorbed into content
================
topic foo:
    reasoning:
        instructions: ->
            | hello
              # line one
              # line two
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              block_value: (procedure
                (template
                  (template_content))))))))))
================
Template: comment line between content lines absorbed into content
================
topic foo:
    reasoning:
        instructions: ->
            | hello
              # commented
              world
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              block_value: (procedure
                (template
                  (template_content))))))))))
================
Template: comment at intermediate indent after deeper comment is absorbed into content
================
topic foo:
    reasoning:
        instructions: ->
            | hello
                # deep comment
              # intermediate indent
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              block_value: (procedure
                (template
                  (template_content))))))))))
================
Template: comment at base indent after deeper comment is not part of content
================
topic foo:
    reasoning:
        instructions: ->
            | hello
                # deep comment
            # back at base level
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              block_value: (procedure
                (template
                  (template_content)))
              (comment))))))))
================
Template: comment at lower indent is not part of content
================
topic foo:
    reasoning:
        instructions: ->
            | hello
# top-level comment
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (mapping
            (mapping_element
              key: (key
                (id))
              block_value: (procedure
                (template
                  (template_content)))))))))
  (comment))
