packages/parser-javascript/test/corpus/template_dash_lines.txt
================
Template with dash lines in body
================
config:
    message: |
        - item one
        - item two
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (template
            (template_content)))))))

================
Template with dash on same line as pipe
================
config:
    message: | - not a sequence item
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (template
            (template_content)))))))

================
Procedure template with dash content
================
topic test:
    instructions: ->
        | - template with dash
          and more content
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id)
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          block_value: (procedure
            (template
              (template_content))))))))

================
Template with dash lines and placeholder
================
config:
    message: |
        - hello {!@user.name}
        - goodbye
---
(source_file
  (mapping
    (mapping_element
      key: (key
        (id))
      block_value: (mapping
        (mapping_element
          key: (key
            (id))
          colinear_value: (template
            (template_content)
            (template_expression
              expression: (expression
                (member_expression
                  (expression
                    (atom
                      (at_id
                        (id))))
                  (id))))
            (template_content)))))))
